# ppmil

./: .buildinfo  .gitlab-ci.yml  README.md  community_guidelines.html  doc.Dockerfile  environment.yml  genindex.html  index.html  installation.html  meta.yaml  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  versiontest.py
.github/workflows/: build.yml  build_conda.yml  build_pypi.yml  deploy.yml  docs.yml
_sources/: index.rst.txt
_static/css/: custom.css
deploy/: Dockerfile  README.md
docs/: background.rst  community_guidelines.rst  conf.py  index.rst  installation.rst
docs/_templates/: breadcrumbs.html
ppmil/: __init__.py  _version.py  cgf.py  gto.py  integral_evaluator.py  integrals.py  molecule.py  ppmil.py  quadrature.py
ppmil/eri/: electron_repulsion_engine.py  eri.py  hellsing.py  huzinaga.py  teindex.py
ppmil/erieval/: erieval.py  obara_saika.py
ppmil/math/: gamma.py  gamma_numba.py  math.py
ppmil/nuclear/: hellsing.py  huzinaga.py  nuclear_engine.py
ppmil/overlap/: hellsing.py  huzinaga.py  oe.py  overlap_engine.py
ppmil/util/: cgf.py  gto.py  molecule.py
scripts/: benzene_overlap.py  eri.py  eri_coeff.py  fgamma.py  h2o_eri.py  hermite.py  hor.py  kernel.py  rys.py  screen_kinetic_deriv.py
tests/: test_cgf_quartet.py  test_dipole.py  test_exceptions.py  test_fgamma.py  test_kinetic.py  test_kinetic_deriv.py  test_nuclear.py  test_nuclear_deriv.py  test_overlap.py  test_overlap_deriv.py  test_quadrature.py  test_repulsion.py  test_repulsion_deriv.py  testdipole.py  testoverlap.py  testquadrature.py
(+15 files in other folders)
